--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
 <h1> Pagina web del curso Introdución a GitHub </h1>
-<p> HCE AÑOS QUE NO ESCRIBÍA CON CÓDIGO HTML >/p>
+<p> HACE AÑOS QUE NO ESCRIBÍA CON CÓDIGO HTML >/p>
 </html>
